spacing fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -105,6 +105,10 @@ img {
   margin-bottom: 5px; /* Adjust the value as needed */
 }
 
+.subText-heading {
+  margin-bottom: 5px; /* Adjust the value as needed */
+}
+
 .external-links a {
   margin-top: 30px;
   margin: 0 10px;
